design: 로딩화면 디자인 수정
Former-commit-id: 7338eb87a59ab7c255939f24bfa91210cf3b31cd

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_loading.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_loading.xml
@@ -5,7 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FCFCFC"
-    android:padding="36dp"
+    android:paddingHorizontal="36dp"
+    android:paddingTop="36dp"
+    android:paddingBottom="24dp"
     tools:context=".ui.LoadingFragment">
 
     <TextView
@@ -225,7 +227,7 @@
         android:paddingBottom="16dp"
         android:backgroundTint="#4285F4"
         tools:visibility="visible"
-        android:visibility="gone"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
