--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step1_guide.xml
@@ -129,6 +129,7 @@
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_marginTop="28dp"
+                android:layout_marginStart="-10dp"
                 android:src="@drawable/ic_bullet_gray"
                 app:layout_constraintStart_toStartOf="@id/tv_description1"
                 app:layout_constraintTop_toBottomOf="@id/tv_description2" />
