--- a/frontend/Kkomdae/app/src/main/res/layout/layout_register_top_bar.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_register_top_bar.xml
@@ -14,7 +14,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/back_button_container"
         android:layout_marginStart="56dp"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textColor="@color/gray800"
         android:fontFamily="@font/pretendard_semi_bold"
         android:lineSpacingMultiplier="1.4"/>
