--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_laptop_info_input.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_laptop_info_input.xml
@@ -90,19 +90,43 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <ImageView
-                android:id="@+id/btn_ocr_serial"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/cl_btn_ocr"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_retake_btn"
-                android:clickable="true"
-                android:focusable="true"
-                android:elevation="8dp"
-                android:focusableInTouchMode="true"
-                app:layout_constraintEnd_toEndOf="@+id/il_serial"
-                app:layout_constraintBottom_toBottomOf="@id/il_serial"
-                app:layout_constraintTop_toTopOf="@+id/il_serial"
-                app:tint="@color/gray700" />
+                android:padding="16dp"
+                app:layout_constraintTop_toTopOf="@id/tv_serial"
+                app:layout_constraintBottom_toBottomOf="@id/tv_serial"
+                app:layout_constraintEnd_toEndOf="@id/il_serial"
+                android:layout_height="wrap_content">
+
+
+                <ImageView
+                    android:id="@+id/btn_ocr_serial"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_orc"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:elevation="8dp"
+                    android:focusableInTouchMode="true"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:tint="@color/blue400" />
+                <TextView
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/btn_ocr_serial"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:layout_width="wrap_content"
+                    android:layout_marginStart="8dp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:textColor="@color/blue400"
+                    android:layout_height="wrap_content"
+                    style="@style/Title4"
+                    android:text="정보 스캔"/>
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
             <TextView
                 android:id="@+id/tv_barcode"
@@ -253,8 +277,8 @@
 
                     <ImageView
                         android:id="@+id/iv_laptop_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="26sp"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:src="@drawable/ic_laptop_12"
                         app:layout_constraintBottom_toBottomOf="@id/btn_laptop_plus"
                         app:layout_constraintStart_toStartOf="parent"
@@ -262,7 +286,7 @@
                         app:tint="@color/gray700" />
 
                     <TextView
-                        style="@style/Title2"
+                        style="@style/Title4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
@@ -311,8 +335,8 @@
 
                     <ImageView
                         android:id="@+id/iv_power_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:src="@drawable/ic_power"
                         app:layout_constraintBottom_toBottomOf="@id/btn_power_minus"
                         app:layout_constraintStart_toStartOf="parent"
@@ -320,7 +344,7 @@
                         app:tint="@color/gray700" />
 
                     <TextView
-                        style="@style/Title2"
+                        style="@style/Title4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
@@ -370,8 +394,8 @@
 
                     <ImageView
                         android:id="@+id/iv_adapter_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:src="@drawable/ic_adapter"
                         app:layout_constraintBottom_toBottomOf="@id/btn_adapter_plus"
                         app:layout_constraintStart_toStartOf="parent"
@@ -379,7 +403,7 @@
                         app:tint="@color/gray700" />
 
                     <TextView
-                        style="@style/Title2"
+                        style="@style/Title4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
@@ -429,8 +453,8 @@
 
                     <ImageView
                         android:id="@+id/iv_mouse_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:src="@drawable/ic_mouse"
                         app:layout_constraintBottom_toBottomOf="@id/btn_mouse_plus"
                         app:layout_constraintStart_toStartOf="parent"
@@ -438,7 +462,7 @@
                         app:tint="@color/gray700" />
 
                     <TextView
-                        style="@style/Title2"
+                        style="@style/Title4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
@@ -487,8 +511,8 @@
 
                     <ImageView
                         android:id="@+id/iv_bag_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:src="@drawable/ic_bag"
                         app:layout_constraintBottom_toBottomOf="@id/btn_bag_plus"
                         app:layout_constraintStart_toStartOf="parent"
@@ -496,7 +520,7 @@
                         app:tint="@color/gray700" />
 
                     <TextView
-                        style="@style/Title2"
+                        style="@style/Title4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
@@ -546,16 +570,18 @@
 
                     <ImageView
                         android:id="@+id/iv_pad_icon"
-                        android:layout_width="26dp"
-                        android:layout_height="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_height="20dp"
                         android:src="@drawable/ic_pad"
                         app:layout_constraintBottom_toBottomOf="@id/btn_pad_plus"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="@id/btn_pad_plus"
                         app:tint="@color/gray700" />
 
+
+
                     <TextView
-                        style="@style/Title2"
+                        style="@style/Title4"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="12dp"
