--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_keypad_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_keypad_guide.xml
@@ -17,6 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_height="wrap_content" />
 
+
     <!-- 📌 오버레이: 네모 틀과 반투명 검은색 배경 -->
     <com.pizza.kkomdae.ui.CameraOverlayView
         app:layout_constraintBottom_toBottomOf="parent"
@@ -42,6 +43,29 @@
         app:lottie_autoPlay="false"
         app:lottie_fileName="loading.json"
         app:lottie_loop="true" />
+
+    <com.google.android.material.materialswitch.MaterialSwitch
+        android:id="@+id/sw_auto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        android:checked="true"
+        android:layout_marginStart="8dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_back"
+        app:layout_constraintBottom_toTopOf="@id/btn_shot"
+        app:layout_constraintStart_toStartOf="@id/btn_shot"
+        app:layout_constraintEnd_toEndOf="@id/btn_shot"/>
+    <TextView
+        android:id="@+id/tv_sw_auto"
+        android:visibility="gone"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="자동촬영"
+        style="@style/Caption3"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="@id/sw_auto"
+        app:layout_constraintEnd_toEndOf="@id/sw_auto"
+        app:layout_constraintTop_toBottomOf="@id/sw_auto"/>
 
 
     <ImageButton
