--- a/frontend/Kkomdae/app/src/main/res/layout/layout_register_top_bar.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_register_top_bar.xml
@@ -21,8 +21,10 @@
 
     <FrameLayout
         android:id="@+id/back_button_container"
-        android:layout_width="56dp"
-        android:layout_height="54dp"
+        android:layout_width="0dp"
+        app:layout_constraintDimensionRatio="1:1"
+        android:layout_height="0dp"
+        android:layout_margin="8dp"
         android:clickable="true"
         android:focusable="true"
         android:background="?attr/selectableItemBackgroundBorderless"
