feat: 이미지 로딩 화면 추가
Former-commit-id: 78cbe64d8a7350ec38f6ce8af1d3bba012704bab

--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step4_ai_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step4_ai_result.xml
@@ -80,6 +80,8 @@
             android:layout_height="match_parent">
 
 
+
+
             <ImageView
                 android:id="@+id/iv_image"
                 android:layout_width="match_parent"
@@ -87,6 +89,12 @@
                 android:scaleType="centerCrop"
                 android:src="@color/blue100" />
 
+            <ImageView
+                android:id="@+id/iv_loading"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:src="@color/blue100" />
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/loading_animation"
                 android:layout_width="100dp"
