feat: ai분석화면 이미지 로딩 화면 추가
Former-commit-id: 9da5e591e7ea9534362e5d5f22faa939fee6e9f9

--- a/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout-land/fragment_font_result.xml
@@ -40,6 +40,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop" />
+
+        <ImageView
+            android:id="@+id/iv_loading"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@color/blue100" />
     </androidx.cardview.widget.CardView>
 
     <!-- 가이드라인: 화면을 좌우로 분할 -->
