--- a/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
@@ -129,6 +129,7 @@
             style="@style/Label4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:text="25/01/03"
             app:layout_constraintEnd_toStartOf="@id/bt_file_download"
             android:textColor="@color/gray400"
@@ -168,6 +169,7 @@
             app:layout_constraintStart_toEndOf="@id/bt_file_download"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="4dp"
             app:layout_constraintTop_toBottomOf="@id/line">
 
             <TextView
