--- a/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
@@ -21,8 +21,10 @@
 
     <TextView
         android:id="@+id/tv_model_number"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        app:layout_constraintEnd_toStartOf="@id/tv_state_release"
+        android:layout_marginEnd="2dp"
         android:text="NT761XDA-X07/C(11세대)"
         style="@style/Label2"
         app:layout_constraintBottom_toBottomOf="@id/iv_icon"
@@ -35,7 +37,7 @@
         style="@style/Label4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
+        android:layout_marginEnd="12dp"
         android:background="@drawable/status_border_rounded"
         android:paddingStart="4dp"
         android:paddingTop="2dp"
@@ -54,7 +56,8 @@
         android:layout_height="wrap_content"
         android:text="반납완료"
         style="@style/Label4"
-        android:visibility="gone"
+        android:layout_marginEnd="12dp"
+        android:visibility="invisible"
         android:paddingTop="2dp"
         android:paddingBottom="2dp"
         android:paddingStart="4dp"
@@ -64,7 +67,7 @@
         app:layout_constraintTop_toTopOf="@id/tv_model_number"
         app:layout_constraintBottom_toBottomOf="@id/tv_model_number"
         app:layout_constraintEnd_toStartOf="@id/btn_down"
-        android:layout_marginEnd="20dp"/>
+        />
 
     <ImageView
         android:id="@+id/btn_down"
@@ -115,7 +118,7 @@
             style="@style/Label4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="대여"
+            android:text="대여일자"
             android:textColor="@color/gray400"
             app:layout_constraintBottom_toTopOf="@+id/tv_input_date"
             app:layout_constraintEnd_toEndOf="@+id/tv_input_date"
@@ -129,9 +132,8 @@
             style="@style/Label4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="4dp"
+            android:layout_marginStart="20dp"
             android:text="25/01/03"
-            app:layout_constraintEnd_toStartOf="@id/bt_file_download"
             android:textColor="@color/gray400"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -143,9 +145,7 @@
             style="@style/Label3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="30dp"
             android:layout_marginTop="20dp"
-            android:layout_marginEnd="8dp"
             android:layout_marginBottom="20dp"
             android:background="@drawable/border_gray_rounded"
             android:backgroundTint="@color/blue100"
