--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_keypad_guide.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_keypad_guide.xml
@@ -51,8 +51,8 @@
         android:visibility="gone"
         android:checked="true"
         android:layout_marginStart="8dp"
-        app:layout_constraintTop_toBottomOf="@id/btn_back"
-        app:layout_constraintBottom_toTopOf="@id/btn_shot"
+        android:layout_marginTop="10dp"
+        app:layout_constraintTop_toBottomOf="@id/btn_shot"
         app:layout_constraintStart_toStartOf="@id/btn_shot"
         app:layout_constraintEnd_toEndOf="@id/btn_shot"/>
     <TextView
