--- a/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_step1_result.xml
@@ -8,7 +8,7 @@
         android:id="@+id/cardView"
         android:layout_width="80dp"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_margin="5dp"
         android:backgroundTint="@color/white"
         app:cardCornerRadius="15dp"
         app:strokeColor="@color/gray200"
@@ -87,11 +87,9 @@
         android:textSize="12sp"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:layout_marginTop="-2dp"
-        android:layout_marginEnd="-2dp"
         android:visibility="visible"
         android:elevation="2dp"
-        app:layout_constraintTop_toTopOf="@id/cardView"
-        app:layout_constraintEnd_toEndOf="@id/cardView" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
