fix: 배포 시 발생한 오류 해결
Former-commit-id: fd19a1c77c00c14e8188ec5f1fc7e5da1285fbc9

--- a/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_submission.xml
@@ -205,7 +205,7 @@
                 android:textColor="#E4614F"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@id/bt_file_download" />
+                app:layout_constraintTop_toTopOf="@id/bt_return" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
