--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_final.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_final.xml
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:text="등록한 기기 내용과 AI 분석 결과를 확인해주세요"
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:text="꼼대가 SSAFY에 제출해드릴게요!"
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
