--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step2_intro.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step2_intro.xml
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:text="STEP2는 노트북과 함께 점검을 진행해요!"
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:text="화면의 안내에 따라 노트북 상태를 점검해주세요."
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
