--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step3_confirm.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step3_confirm.xml
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:text="노트북 정보가 정확한지 다시 한 번 확인해주세요."
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:text="입력 후에는 정보 수정이 불가합니다."
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -55,8 +55,8 @@
 
         <ImageView
             android:id="@+id/iv_character"
-            android:layout_width="180dp"
-            android:layout_height="180dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
             android:layout_marginTop="24dp"
             android:contentDescription="확인 캐릭터"
             android:src="@drawable/ic_laptop_info_confirm"
