--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step3_intro.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step3_intro.xml
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:text="등록을 마무리할 시간이에요!"
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:text="노트북 정보와 수령한 물품을 모두 기록해주세요."
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
