--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step_end.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_step_end.xml
@@ -33,7 +33,7 @@
             android:gravity="center"
             android:text="모든 단계가 완료되었어요! "
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:text="이제 노트북 상태 분석을 시작할까요?"
             android:textColor="@color/gray300"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
