--- a/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_mobile_iot.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/layout_dialog_mobile_iot.xml
@@ -47,7 +47,7 @@
             android:gravity="center"
             android:text="조금만 기다려주세요"
             android:textColor="@color/gray500"
-            style="@style/Body2"
+            style="@style/Label3"
             android:lineSpacingExtra="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -60,6 +60,8 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/bg_button_orange"
             android:backgroundTint="@color/gray100"
             android:text="확인"
