--- a/frontend/Kkomdae/app/src/main/res/layout/item_final_ai_image.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_final_ai_image.xml
@@ -19,6 +19,7 @@
         app:layout_constraintDimensionRatio="4:3">
         <ImageView
             android:id="@+id/iv_image"
+            android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:src="@color/blue100"
