--- a/frontend/Kkomdae/app/src/main/res/layout/fragment_step4_ai_result.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/fragment_step4_ai_result.xml
@@ -87,14 +87,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@color/blue100" />
+                android:src="@color/white" />
 
             <ImageView
                 android:id="@+id/iv_loading"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                android:src="@color/blue100" />
+                android:src="@color/white" />
             <com.airbnb.lottie.LottieAnimationView
                 android:id="@+id/loading_animation"
                 android:layout_width="100dp"
