--- a/frontend/Kkomdae/app/src/main/res/layout/item_final_ai_image.xml
+++ b/frontend/Kkomdae/app/src/main/res/layout/item_final_ai_image.xml
@@ -22,8 +22,18 @@
             android:scaleType="centerCrop"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@color/blue100"
+            android:src="@color/white"
             />
+
+        <ImageView
+            android:id="@+id/iv_loading"
+            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@color/white"
+            />
+
+
         <TextView
             android:id="@+id/tv_name"
             android:layout_width="wrap_content"
