fix : 변경된 데이터로 인한 관리자페이지 검색 기능 오류 수정
Former-commit-id: 311a40d7822e3f7963f1bf6c6058f84ea00e63a9

--- a/backend/kkomdae/src/main/resources/templates/students.html
+++ b/backend/kkomdae/src/main/resources/templates/students.html
@@ -134,7 +134,7 @@
             <div class="col-md-2">
                 <input type="number"
                        class="form-control"
-                       name="classNum"
+                       name="className"
                        id="classNumInput"
                        min="1"
                        placeholder="숫자만 입력">
@@ -144,7 +144,7 @@
             <div class="col-md-2">
                 <select class="form-select" name="searchType" th:field="${studentWithRentCond.searchType}">
                     <option value="">선택</option>
-                    <option value="학번">학번</option>
+                    <option value="학생고유번호">학생고유번호</option>
                     <option value="이름">이름</option>
                 </select>
             </div>
@@ -174,7 +174,7 @@
                     <span class="checkmark"></span>
                 </label>
             </th>
-            <th>학번</th>
+            <th>학생고유번호</th>
             <th>이름</th>
             <th>지역</th>
             <th>반</th>
